// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Brand/> should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:focus > img {
  outline: 5px auto -webkit-focus-ring-color;
}

.c1 {
  object-fit: contain;
  width: 3em;
  height: 3em;
  outline: none;
}

<div
    class="c0 aries-brand"
    role="presentation"
    tabindex="0"
  >
    <img
      class="c1 brand-image"
      src="test-file-stub"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`<Brand/> should render as expected 2`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:focus > img {
  outline: 5px auto -webkit-focus-ring-color;
}

.c1 {
  object-fit: contain;
  width: 3em;
  height: 3em;
  outline: none;
}

<div
    class="c0 aries-brand"
    role="presentation"
    tabindex="0"
  >
    <img
      class="c1 brand-image"
      src="test-file-stub"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`<Brand/> should render as expected 3`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:focus > img {
  outline: 5px auto -webkit-focus-ring-color;
}

.c1 {
  object-fit: contain;
  width: 3em;
  height: 3em;
  outline: none;
}

<div
    class="c0 aries-brand"
    role="presentation"
    tabindex="0"
  >
    <img
      class="c1 brand-image"
      src="test-file-stub"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`<Brand/> should render as expected 4`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:focus > img {
  outline: 5px auto -webkit-focus-ring-color;
}

.c1 {
  object-fit: contain;
  width: 3em;
  height: 3em;
  outline: none;
}

<div
    class="c0 aries-brand"
    role="presentation"
    tabindex="0"
  >
    <img
      class="c1 brand-image"
      src="test-file-stub"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`<Brand/> should render as expected 5`] = `
<DocumentFragment>
  .c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

.c0:focus > img {
  outline: 5px auto -webkit-focus-ring-color;
}

.c1 {
  object-fit: contain;
  width: 3em;
  height: 3em;
  outline: none;
}

<div
    class="c0 aries-brand"
    role="presentation"
    tabindex="0"
  >
    <img
      class="c1 brand-image"
      src="http://example.com/example.jpg"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;
